[package]
name = "waylandtrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
nix = { version = "0.29.0", features = ["poll"] }
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["full"] }

wayland-client = { version = "0.31.7" }

wayland-protocols = { version = "0.32.5", default-features = false, features = [
	"unstable",
	"client",
] }

wayland-protocols-wlr = { version = "0.3.5", default-features = false, features = [
	"client",
] }
